# system-pulse

./: .dockerignore  .gitignore  README.md  docker-compose.yml
agents/rust-agents/: Dockerfile  main.py  requirements.txt  ssh_manager.py
backend/: .env  Cargo.toml  Dockerfile
backend/src/: auth.rs  lib.rs  main.rs  metrics.rs  servers.rs
backend/src/api/: mod.rs  packet.rs  websockets.rs
backend/src/engine/: analyzer.rs
backend/src/models/: models.rs
backend/src/network/: sniffer.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/assets/styles/: global.css
frontend/src/components/: Login.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useStats.ts  useWebSocket.ts
frontend/src/pages/: AuthPage.tsx  LandingPage.tsx  MonitorPage.tsx
frontend/src/services/: auth.ts
scripts/: init.sql
