[package]
name = "system-pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.8.9", features = ["ws"]}
tower-http = {version = "0.6.10", features = ["cors", "trace"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "macros",
] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "10.4.0"
bcrypt = "0.19.1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"